// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Spacer/Default Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="spacer is-playground"
    style={
      Object {
        "display": "inline-block",
        "height": 0,
        "width": 0,
      }
    }
  />
</div>
`;

exports[`Storyshots Layout/Spacer/Default Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="spacer is-playground"
    style={
      Object {
        "display": "inline-block",
        "height": 0,
        "width": 0,
      }
    }
  />
  <div
    className="spacer is-playground"
    style={
      Object {
        "display": "inline-block",
        "height": 5,
        "width": 5,
      }
    }
  />
  <div
    className="spacer is-playground"
    style={
      Object {
        "display": "inline-block",
        "height": 15,
        "width": 15,
      }
    }
  />
  <div
    className="spacer is-playground"
    style={
      Object {
        "display": "inline-block",
        "height": 20,
        "width": 20,
      }
    }
  />
  <div
    className="spacer is-playground"
    style={
      Object {
        "display": "inline-block",
        "height": 40,
        "width": 40,
      }
    }
  />
</div>
`;
